fix: navbar sizing on mobile

--- a/assets/base.scss
+++ b/assets/base.scss
@@ -152,7 +152,7 @@ button {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  min-height: calc(var(--vh, 1vh) * 100);
+  min-height: calc(var(--vh, 1dvh) * 100);
   // min-height: calc(100vh - 56px);
   .bg {
     flex: 1;
